tests/netperf/wwu_1G/udp_075/outgoing.txt
root@cf418-nel-02 ~/ipfwd# netperf -c -C -l 30 -H cf498-nel-01 -t UDP_STREAM
MIGRATED UDP STREAM TEST from 0.0.0.0 (0.0.0.0) port 0 AF_INET to cf498-nel-01.cs.wwu.edu () port 0 AF_INET : histogram : interval : dirty data : demo
Socket  Message  Elapsed      Messages                   CPU      Service
Size    Size     Time         Okay Errors   Throughput   Util     Demand
bytes   bytes    secs            #      #   10^6bits/sec % CC     us/KB

  9216    9216   30.02      386446 6489890      949.1     13.16    9.090
 42080           30.02           0               0.0     2.55     1.758

root@cf418-nel-02 ~/ipfwd#


root@cf418-nel-02 ~/i/ipfwd# ./ipfwd 1 0.75
[ipfwd] starting
current:  1.392%, error:  1.4%, probability:  0.750%
current:  1.276%, error:  1.5%, probability:  0.750%
current:  2.173%, error:  0.9%, probability:  0.750%
current:  2.997%, error:  0.8%, probability:  0.750%
current:  3.754%, error:  0.8%, probability:  0.750%
current:  4.449%, error:  0.7%, probability:  0.750%
current:  5.090%, error:  0.6%, probability:  0.750%
current:  5.682%, error:  0.6%, probability:  0.750%
current:  5.225%, error:  0.5%, probability:  0.750%
current:  4.803%, error:  0.4%, probability:  0.750%
current:  4.413%, error:  0.4%, probability:  0.750%
current:  4.059%, error:  0.4%, probability:  0.750%
current:  3.729%, error:  0.3%, probability:  0.750%
current:  3.430%, error:  0.3%, probability:  0.750%
current:  3.149%, error:  0.3%, probability:  0.750%
current:  3.894%, error:  0.7%, probability:  0.750%
current:  3.577%, error:  0.3%, probability:  0.750%
^C~root@cf418-nel-02 ~/i/ipfwd#
